--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: meTime_app
+name: metime_app
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -24,8 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^4.0.4
-  sqflite: ^1.3.1+2
-
+  sqflite: ^2.0.0+3
+  path_provider: ^2.0.1
+  package_info: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
